--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@dailybruin/gatsby-source-kerckhoff": "^1.1.1",
     "@dailybruin/lux": "1.5.4",
+    "@material-ui/core": "^3.5.1",
+    "@material-ui/icons": "^3.0.1",
     "@types/react": "16.4.18",
     "emotion": "^9.2.12",
     "emotion-server": "^9.2.12",
@@ -35,7 +37,8 @@
     "react-helmet": "5.2.0",
     "react-typography": "0.16.13",
     "slugify": "^1.3.2",
-    "typography": "0.16.17"
+    "typography": "0.16.17",
+    "video-react": "^0.13.1"
   },
   "devDependencies": {
     "prettier": "1.14.3"
