--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
   ],
   "dependencies": {
     "@dailybruin/gatsby-source-kerckhoff": "^1.1.1",
-    "@dailybruin/lux": "1.5.4",
+    "@dailybruin/lux": "^1.7.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
+    "@material-ui/core": "^3.5.1",
     "@types/react": "16.4.18",
     "emotion": "^9.2.12",
     "emotion-server": "^9.2.12",
+    "font-awesome": "^4.7.0",
     "gatsby": "2.0.38",
     "gatsby-plugin-emotion": "^2.0.6",
     "gatsby-plugin-google-analytics": "^2.0.7",
@@ -29,9 +34,12 @@
     "gatsby-plugin-typescript": "2.0.1",
     "gatsby-plugin-typography": "2.2.1",
     "normalize.css": "8.0.0",
+    "nuka-carousel": "^4.4.3",
+    "re-carousel": "^2.3.0",
     "react": "16.6.1",
     "react-dom": "16.6.1",
     "react-emotion": "^9.2.12",
+    "react-fontawesome": "^1.6.1",
     "react-helmet": "5.2.0",
     "react-typography": "0.16.13",
     "slugify": "^1.3.2",
