--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   "dependencies": {
     "@dailybruin/gatsby-source-kerckhoff": "^1.1.1",
     "@dailybruin/lux": "^1.7.0",
-    "@material-ui/core": "^3.5.1",
-    "@material-ui/icons": "^3.0.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "@types/react": "16.4.18",
     "emotion": "^9.2.12",
     "emotion-server": "^9.2.12",
