--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "@dailybruin/gatsby-source-kerckhoff": "^1.1.1",
-    "@dailybruin/lux": "^1.7.0",
+    "@dailybruin/lux": "^1.9.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
@@ -41,6 +41,7 @@
     "react-emotion": "^9.2.12",
     "react-fontawesome": "^1.6.1",
     "react-helmet": "5.2.0",
+    "react-response": "^0.1.0",
     "react-typography": "0.16.13",
     "slugify": "^1.3.2",
     "typography": "0.16.17"
