--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-helmet": "5.2.0",
     "react-typography": "0.16.13",
     "slugify": "^1.3.2",
-    "typography": "0.16.17"
+    "typography": "0.16.17",
+    "video-react": "^0.13.1"
   },
   "devDependencies": {
     "prettier": "1.14.3"
